Fix vertical alignment of field type toggle icons in the page editor - 1.7.20 papercut (#5309)

--- a/src/components/fields/schemaFields/widgets/TemplateToggleWidget.module.scss
+++ b/src/components/fields/schemaFields/widgets/TemplateToggleWidget.module.scss
@@ -25,9 +25,6 @@
   flex-grow: 0;
   flex-shrink: 0;
 
-  display: flex;
-  align-items: center;
-
   > button {
     // React-bootstrap Button defaults to 0.75rem horizontal
     // and 0.375rem vertical padding; we don't need that much
